<resources>
    <string name="app_name">SiBooks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SiBooks</string>
    <string name="nav_header_subtitle">Implementasi Client Server</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_sub_menu_title">Sub menu</string>
    <string name="nav_menu_title_about">About</string>

    <string name="menu_home">Home</string>
    <string name="kategori">Kategori</string>
    <string name="penerbit">Penerbit</string>
    <string name="about">About</string>
    <string name="other">Other</string>
    <string name="share">Share</string>
    <string name="kode_kategori">Kode Kategori</string>
    <string name="id_kategori">Id Kategori</string>
</resources>
