<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_kategori"
            android:icon="@drawable/ic_kategori"
            android:title="@string/kategori" />

        <item
            android:id="@+id/nav_penerbit"
            android:icon="@drawable/ic_penerbit"
            android:title="@string/penerbit" />
    </group>



    <item
        android:id="@+id/section"
        android:title="@string/other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share"/>

                <item
                    android:id="@+id/nav_report"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share"/>

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/nav_menu_title_about"/>
            </group>
        </menu>
    </item>
</menu>
